--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1934,6 +1934,9 @@
                 android:value="true" />
         </activity>
 
+<activity
+	android:name=".disco.DiscoExtras" />
+
         <receiver android:name=".widget.SettingsAppWidgetProvider"
                 android:label="@string/gadget_title"
                 android:exported="false"
