Add customization for Quick Settings [2/2]
Add a new section to customize Quick Settings.

Modified DraggableGridView to arrange the items differently.

Gave everything a "Material-ish" style.

Inversion and Hotspot tiles can be rearranged now.

Creadted a "Notification Drawer" category.

frameworks/base: http://review.cyanogenmod.org/83417/

Change-Id: I88f9f067e60e66d51583219c497aab39cb187fb4

Conflicts:

	Android.mk
	res/values/cm_plurals.xml
	res/values/cm_strings.xml
	res/xml/dashboard_categories.xml

fix strings

QS rearrange: fix build errors + missing strings

fix some errors+fcs

oops fix fix fix

oops

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -440,6 +440,9 @@
                 android:value="true" />
         </activity>
 
+	<activity
+	android:name=".cyanogenmod.NotificationDrawerSettings" />
+
         <activity android:name="DateTimeSettingsSetupWizard"
                   android:label="@string/date_and_time"
                   android:theme="@android:style/Theme.Material.Light.NoActionBar"
