Settings: Create "ProjectDisco Tweaks" menu for non-AOSP settings
* drawables by Alex Cruz
* battery icon options are missing (they are still at settings>battery)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2078,6 +2078,8 @@
                        android:resource="@id/wireless_settings" />
         </activity>
 
+	<activity android:name=".disco.ProjectDiscoTweaks" />
+
         <provider
             android:name=".search.SettingsSearchIndexablesProvider"
             android:authorities="com.android.settings"
